fix icon alignment with text

--- a/mobileapp.css
+++ b/mobileapp.css
@@ -108,7 +108,7 @@ ul ul {
 }
 
 /*align icons with text in each unit*/
-a.item.item-text-wrap.mm-course-module-handler.mma-mod_forum-handler.item-button-right.item-media span{
+a.item.item-text-wrap.mm-course-module-handler.mma-mod_forum-handler.item-button-right.item-media.item-completion span{
   display: inline-block;
   vertical-align: -5px;
 }
